test/expressions/comparisons/paramUintCompares.good
paramUintCompares.chpl:32: error: Everything's OK!
